--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -17,7 +17,7 @@
     </div >
 
     <div class="col" >
-      <a href="/employee" class="btn btn-info" >
+      <a href="/employee" class="btnview" >
         View Employees
       </a >
     </div >
