PerformanceEvaluationRequest was fixed

--- a/src/main/resources/templates/performanceEvaluation/voilateRequest.html
+++ b/src/main/resources/templates/performanceEvaluation/voilateRequest.html
@@ -39,6 +39,9 @@
   <div class="row" >
     <i class="bi bi-exclamation-diamond" style="size: 36px" ></i >
   </div >
+  <div class="row text-center">
+    <a href="/home"  class="btn btn-info">Home</a >
+  </div>
 </div >
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script include-->
