--- a/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <h4 data-th-text="${addStatus==true?'New Leave ':'Update Leave'}" ></h4 >
+          <span class="h4" data-th-text="${addStatus==true?'New Leave ':'Update Leave'}" ></span >
         </strong >
       </h4 >
     </div >
@@ -201,9 +201,27 @@
 
 <div data-th-replace="~{fragments/unicodeSinhala :: unicodeSinhalaFragment}" ></div >
 <div data-th-replace="~{fragments/unicodeTamil :: unicodeTamilFragment}" ></div >
-
+<input type="date" hidden id="assignDate" data-th-value="${employeeDetail.dateOfAssignment}">
 
 <script >
+
+    $(document).ready(function () {
+        let today = new Date();
+        let assignDate = Date.parse($("#assignDate").val());
+        let eDT = Date.parse(endDateTime);
+        if (assignDate > eDT) {
+
+        }
+    });
+
+    $(`#endAt`).change(function (){
+        $(`#startAt`).attr('min',$(this).val());
+    });
+
+    $(`#startAt`).change(function (){
+        $(`#endAt`).attr('max',$(this).val());
+    });
+
 
     function dateMatch() {
         let startDateTime = $(`#startAt`).val();
