--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -425,7 +425,7 @@
 
     $("#supervisor").select2({
         data: $(this).val()
-    });
+    }).addClass('form-control');;
 
     function readURL(input) {
         if (input.files && input.files[0]) {
