addEmployeeLeave.html was fixed

--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -234,6 +234,13 @@
             $("#image").toggle('hide');
         }
     }
+
+
+    $("#offence").change(function (){
+        /*todo*/
+    });
+
+
     $("#punishment, #offence").select2({
         data: $(this).val()
     }).addClass('form-control');
