email service is ok

--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -41,9 +41,9 @@
     <div style="margin-top:10px">
         <button id="btnLogin" class="col-md-12 btn btn-primary"><i class= "fa fa-key" style="margin-right: 10px;font-size: 18px"></i>Login</button>
     </div>
-
+    <!--Forgot Password ?-->
     <div>
-        <a href="#" class="for-pass">Forgot Password ?</a>
+        <a href="#" class="for-pass"></a>
     </div>
 
 <div class="container-fluid " th:if="${param.error}">
