--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -57,7 +57,7 @@
             </div >
             <div class="col-md-8" >
               <input id="code" data-th-field="*{code}" class="form-control" tabindex="4"
-                     type="text" required />
+                     type="text" required readonly/>
               <span id="codeE" data-th-errors="*{code}"
                     data-th-if="${#fields.hasErrors('code')}" class="error" >Error Employee code
                             </span >
@@ -371,8 +371,7 @@
                 <label class="control-label" for="createdBy" >Created By :</label >
               </div >
               <div class="col-md-8" >
-                <input id="createdBy" data-th-field="*{createdBy}" class="form-control" type="text"
-                       readonly />
+                <p id="createdBy" data-th-field="*{createdBy}" class="form-control" ></p>
               </div >
             </div >
             <div class="form-row text-right" >
@@ -380,8 +379,8 @@
                 <label class="control-label" for="createdAt" >Created At :</label >
               </div >
               <div class="col-md-8" >
-                <input id="createdAt" data-th-text="${{createdAt}}" class="form-control" type="text"
-                       readonly />
+                <p id="createdAt" data-th-text="${{employee.createdAt}}" class="form-control"
+                ></p>
               </div >
             </div >
           </div >
