--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,16 +10,6 @@
     <!-- Bootstrap core CSS Downloaded file add-->
     <link data-th-href="@{/webjars/bootstrap/4.4.1/css/bootstrap.min.css} " media="all" rel="stylesheet" type="text/css"/>
 
-    <!--Jquery ui-->
-    <link data-th-href="@{/webjars/jquery-ui/1.12.1/jquery-ui.css} " media="all" rel="stylesheet" type="text/css"/>
-    <link data-th-href="@{/webjars/jquery-ui/1.12.1/jquery-ui.structure.css}" media="all" rel="stylesheet" type="text/css"/>
-    <link data-th-href="@{/webjars/jquery-ui/1.12.1/jquery-ui.theme.css}" media="all" rel="stylesheet" type="text/css"/>
-
-    <!--Pdf js -->
-    <!--<link data-th-href="@{/webjars/pdf-js/2.3.200/web/viewer.css}" media="all" rel="stylesheet" type="text/css">-->
-
-    <!--&lt;!&ndash;Chart js&ndash;&gt;-->
-    <link data-th-href="@{/webjars/chart.js/2.9.3/dist/Chart.min.css}" media="all" rel="stylesheet" type="text/css">
 
     <!--table pagination-->
     <link data-th-href="@{/css/dataTables.bootstrap.min.css}" media="all" rel="stylesheet" type="text/css"/>
@@ -34,7 +24,8 @@
     <!--Login Background-->
     <link data-th-href="@{/css/style.css}" media="all" rel="stylesheet" type="text/css"/>
     <link data-th-href="@{/css/magnific-popup.css}" media="all" rel="stylesheet" type="text/css"/>
-    <link data-th-href="@{/css/tooplate-style.css}" media="all" rel="stylesheet" type="text/css"/>
+
+<!--    <link data-th-href="@{/css/tooplate-style.css}" media="all" rel="stylesheet" type="text/css"/>-->
     <!--<link data-th-href="@{/slick/fonts}" media="all" rel="stylesheet" type="text/css"/>
     <link data-th-href="@{/webfonts}" media="all" rel="stylesheet" type="text/css"/>-->
 </head>
