--- a/src/main/resources/templates/institute/institute.html
+++ b/src/main/resources/templates/institute/institute.html
@@ -12,7 +12,7 @@
     <div class="row text-center ">
         <!-- New Institute Button-->
         <div class="col">
-            <a class="btn btn-success" href="/institute/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
+            <a class="btn btn-success" href="/institute/add"><i class="fa  fa-plus" style="font-size: 20px"></i>&nbsp;&nbsp;Add New Institute </a>&nbsp;
         </div>
         <!-- List Name-->
         <div class="col">
